모의data 입력 완료

--- a/app/views/gymadms/index.html.erb
+++ b/app/views/gymadms/index.html.erb
@@ -7,7 +7,7 @@
     <th>adm_no</th>
   </tr>
  
-  <% @gymadm.each do |ga| %>
+  <% @gymadms.each do |ga| %>
     <tr>
       <td><%= ga.id %></td>
       <td><%= ga.gym_no %></td>
