--- a/app/views/gymusers/new.html.erb
+++ b/app/views/gymusers/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for :gymuser, url: gymusers_path do |f| %>
   <p>
     <%= f.label :gym_no %>
-    <%= f.text_field :gym_no, :placeholder=>"input gym no" %>
+    <%= f.text_field :gym_no, :placeholder=>"input gym_no" %>
   </p>
 
   <p>
